<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemindMe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_task">Add Task</string>
    <string name="title_activity_add_task">New Task</string>
    <string name="task_title">Task Name</string>
    <string name="task_description">Description</string>
    <string name="due_date">Due Date</string>
    <string name="due_time">Due Time</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="default_owner_firstname">Me</string>
    <string name="task_created">Task created!</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="done">Done</string>
    <string name="select_action">Select Action</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="mark_as_done">Mark as Done</string>

</resources>
