<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    
    <TextView 
        android:id="@+id/edit_task"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingRight="20dp"
        android:drawableLeft="@drawable/ic_action_pen"
        android:paddingLeft="30dp"
        android:text="@string/edit_task" 
        android:clickable="true"
        android:gravity="center"
        android:background="@drawable/back"
        />
    
    <TextView 
        android:id="@+id/mark_as_done_task"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingRight="20dp"
        android:drawableLeft="@drawable/ic_action_check"
        android:paddingLeft="30dp"
        android:text="@string/mark_as_done" 
        android:clickable="true"
        android:layout_below="@id/edit_task"
        android:gravity="center"
        android:background="@drawable/back"
        />
    
    <TextView 
        android:id="@+id/delete_task"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingRight="20dp"
        android:drawableLeft="@drawable/ic_action_trash"
        android:paddingLeft="30dp"
        android:text="@string/delete_task" 
        android:clickable="true"
        android:layout_below="@id/mark_as_done_task"
        android:gravity="center"
        android:background="@drawable/back"
        />    
</RelativeLayout>
